force-app/main/default/objects/UserLog__c/UserLog__c.object-meta.xml
<CustomObject>
    <label>Journal de l'utilisateur</label>
    <nameField>
        <displayFormat>UL-{0000}</displayFormat>
        <label>Nom du journal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journaux des utilisateurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 