force-app/main/default/objects/UserLog__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>Date de l'événement</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 