force-app/main/default/objects/UserLog__c/fields/EventDetails__c.field-meta.xml
<CustomField>
    <fullName>EventDetails__c</fullName>
    <label>Détails de l'événement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField> 