force-app/main/default/objects/UserLog__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Type d'événement</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 