force-app/main/default/objects/UserLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Utilisateur</label>
    <length>18</length>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Journaux de l'utilisateur</relationshipLabel>
    <relationshipName>UserLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField> 